--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -15,13 +15,11 @@
     "default_model": {
       "provider": "openai",
       "model": "gpt-4o-mini"
-    },
-    "version": "2"
+    }
   },
   "auto_install_extensions": {},
   "features": {
-    "edit_prediction_provider": "zed",
-    "copilot": false
+    "edit_prediction_provider": "zed"
   },
   "toolbar": {
     "breadcrumbs": true,
